--- a/assignments.html
+++ b/assignments.html
@@ -32,6 +32,18 @@
             </p>
         </section>
 
+        <section></section>
+            <h2>Assignment 1: Data Collection and Analysis</h2>
+            <p>
+                The assignment focussed on achieveing the following goals:
+                1. Practice collecting, interacting, and visualizing data.
+                2. Practice making a hypothesis based on training data and then evaluating it on test data.
+            </p>
+            <p>
+                <a href="https://github.com/Swatkats13/jains-assignment-1.git">Github Link</a>
+            </p>
+        </section>
+
        
 
     </main>
