--- a/assignments.html
+++ b/assignments.html
@@ -44,6 +44,18 @@
             </p>
         </section>
 
+        <section></section>
+            <h2>Assignment 2: KMeans Clustering Visualization Webpage</h2>
+            <p>
+                In this assignment, an interactive web application that demonstrates the KMeans clustering algorithm 
+                using various initialization methods was created. The goal was to explore the impact of different initialization 
+                strategies for the KMeans Algorithm on the clustering outcome.
+            </p>
+            <p>
+                <a href="https://github.com/Swatkats13/jains-assignment-2.git">Github Link</a>
+            </p>
+        </section>
+
        
 
     </main>
