--- a/assignments.html
+++ b/assignments.html
@@ -54,6 +54,10 @@
             <p>
                 <a href="https://github.com/Swatkats13/jains-assignment-2.git">Github Link</a>
             </p>
+            <video width="640" height="360" controls>
+                <source src="videos/KmeansVid.mov" type="video/mov">
+                Your browser does not support the video tag.
+            </video>
         </section>
 
        
