--- a/assignments.html
+++ b/assignments.html
@@ -55,7 +55,7 @@
                 <a href="https://github.com/Swatkats13/jains-assignment-2.git">Github Link</a>
             </p>
             <video width="640" height="360" controls>
-                <source src="videos/KmeansVid.mov" type="video/mov">
+                <source src="videos/KmeansVid.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </section>
