--- a/assignments.html
+++ b/assignments.html
@@ -60,6 +60,20 @@
             </video>
         </section>
 
+        <section></section>
+            <h2>Assignment 3: Singular Value Decomposition(SVD) Implementation</h2>
+            <p>
+                The assignment focussed on achieveing the following goals:
+                1. Using  SVD to perform dimensionality reduction on a dataset.
+                2. Exploring the effect of the number of dimensions on the performance of a classifier,
+                3. Visualizing the results for comparison and analysis.
+                
+            </p>
+            <p>
+                <a href="https://github.com/Swatkats13/jains-assignment-3.git">Github Link</a>
+            </p>
+        </section>
+
        
 
     </main>
