--- a/assignments.html
+++ b/assignments.html
@@ -74,6 +74,21 @@
             </p>
         </section>
 
+        <section></section>
+            <h2>Assignment 4: Latent Semantic Analysis (LSA) Search Engine Webpage</h2>
+            <p>
+                In this assignment, I built an interactive web application that demonstrates LSA implementation in a search engine.
+                The search engine takes a user’s query, perform LSA on a pool of documents, 
+                and returns the top documents based on cosine similarity.
+            <p>
+                <a href="https://github.com/Swatkats13/jains-assignment-4.git">Github Link</a>
+            </p>
+            <video width="640" height="360" controls>
+                <source src="videos/lsa.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </section>
+
        
 
     </main>
