--- a/assignments.html
+++ b/assignments.html
@@ -89,6 +89,18 @@
             </video>
         </section>
 
+        <section></section>
+            <h2>Assignment 5: K-Nearest Neighbors Kaggle Competition </h2>
+            <p>
+                In this assignment, I implementED a K-Nearest Neighbors (KNN) model from scratch to predict customer 
+                churn for a bank. The goal was to identify customers who are likely to leave the bank based on historical 
+                data and submit the predictions in a mini Kaggle competition.
+            <p>
+                <a href="https://github.com/Swatkats13/jains-assigment-5.git">Github Link</a>
+            </p>
+            
+        </section>
+
        
 
     </main>
