--- a/assignments.html
+++ b/assignments.html
@@ -92,9 +92,11 @@
         <section></section>
             <h2>Assignment 5: K-Nearest Neighbors Kaggle Competition </h2>
             <p>
-                In this assignment, I implementED a K-Nearest Neighbors (KNN) model from scratch to predict customer 
+                In this assignment, I implemented a K-Nearest Neighbors (KNN) model from scratch to predict customer 
                 churn for a bank. The goal was to identify customers who are likely to leave the bank based on historical 
                 data and submit the predictions in a mini Kaggle competition.
+                <img src="images/Kaggle.png" alt="Kaggle Score" width="500">
+
             <p>
                 <a href="https://github.com/Swatkats13/jains-assigment-5.git">Github Link</a>
             </p>
