--- a/assignments.html
+++ b/assignments.html
@@ -95,7 +95,8 @@
                 In this assignment, I implemented a K-Nearest Neighbors (KNN) model from scratch to predict customer 
                 churn for a bank. The goal was to identify customers who are likely to leave the bank based on historical 
                 data and submit the predictions in a mini Kaggle competition.
-                <img src="images/Kaggle.png" alt="Kaggle Score" width="500">
+                <!--<img src="images/Kaggle.png" alt="Kaggle Score" width="500"> -->
+
 
             <p>
                 <a href="https://github.com/Swatkats13/jains-assigment-5.git">Github Link</a>
