--- a/assignments.html
+++ b/assignments.html
@@ -135,6 +135,27 @@
         </video>
     </section>
 
+    <h2>Assignment 7: Hypothesis Testing and Confidence Intervals in Linear Regression </h2>
+    <p>
+        In this assignment, I extended my previous work from Assignment 6 to include hypothesis 
+        testing and confidence intervals through simulations. I enhanced the interactive webpage to 
+        allow users to perform hypothesis tests on the slope or intercept of the regression line and 
+        generate confidence intervals based on simulations.
+
+
+    <p>
+
+
+        <a href="https://github.com/Swatkats13/jains-assignment-7.git">Github Link</a>
+    </p>
+    
+
+    <video width="640" height="360" controls>
+        <source src="videos/Regression2.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</section>
+
        
 
     </main>
