--- a/assignments.html
+++ b/assignments.html
@@ -156,6 +156,25 @@
     </video>
 </section>
 
+
+<h2>Assignment 8: Logistic Regression </h2>
+<p>
+    In this assignment, I explored the effect of shifting clusters in a dataset 
+    on the parameters of a logistic regression model.
+
+<p>
+
+
+    <a href="https://github.com/Swatkats13/jains-assignment-8.git">Github Link</a>
+</p>
+
+
+<video width="640" height="360" controls>
+    <source src="videos/LogReg.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
+</section>
+
        
 
     </main>
