--- a/assignments.html
+++ b/assignments.html
@@ -175,6 +175,20 @@
 </video>
 </section>
 
+<h2>Assignment 9: Logistic Regression </h2>
+<p>
+    In this assignment, I will implement and analyze a simple neural network by visualizing its learned features,
+    decision boundary, and gradients. The goal was to develop a deeper understanding of how a Feedforward Neural Network with 
+    one hidden layer operates and represents the input space during learning.
+
+
+
+<p>
+
+
+    <a href="https://github.com/Swatkats13/jains-assignment-8.git">Github Link</a>
+</p>
+
        
 
     </main>
