--- a/assignments.html
+++ b/assignments.html
@@ -175,10 +175,10 @@
 </video>
 </section>
 
-<h2>Assignment 9: Logistic Regression </h2>
+<h2>Assignment 10: Neural Networks </h2>
 <p>
-    In this assignment, I will implement and analyze a simple neural network by visualizing its learned features,
-    decision boundary, and gradients. The goal was to develop a deeper understanding of how a Feedforward Neural Network with 
+    In this assignment, I implemented and analyzed a simple neural network by visualizing its learned features,
+    decision boundary and gradients. The goal was to develop a deeper understanding of how a Feedforward Neural Network with 
     one hidden layer operates and represents the input space during learning.
 
 
