--- a/assignments.html
+++ b/assignments.html
@@ -186,8 +186,12 @@
     <a href="https://github.com/Swatkats13/jains-assignment-9.git">Github Link</a>
 </p>
 
+<video width="640" height="360" controls>
+    <source src="videos/nn.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
+</section>
        
-
     </main>
 </body>
 </html>
