--- a/assignments.html
+++ b/assignments.html
@@ -133,6 +133,8 @@
             <source src="videos/Regression.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
+
+
     </section>
 
     <h2>Assignment 7: Hypothesis Testing and Confidence Intervals in Linear Regression </h2>
@@ -154,6 +156,8 @@
         <source src="videos/Regression2.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
+
+
 </section>
 
 
@@ -173,6 +177,7 @@
     <source src="videos/LogReg.mp4" type="video/mp4">
     Your browser does not support the video tag.
 </video>
+
 </section>
 
 <h2>Assignment 9: Neural Networks </h2>
@@ -190,6 +195,23 @@
     <source src="videos/nn.mp4" type="video/mp4">
     Your browser does not support the video tag.
 </video>
+
+</section>
+
+<h2>Assignment 10: Image Search </h2>
+<p>
+    In this assignment, the goal was to implement a simplified version of Google Image Search.
+<p>
+
+    <a href="https://github.com/Swatkats13/jains-assignment-10.git">Github Link</a>
+</p>
+
+<video width="640" height="360" controls>
+    <source src="videos/ImageSearch.mov" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
+
+
 </section>
        
     </main>
