--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
 <body>
     <nav>
         <a href="index.html">About Me</a> |
-        <a href="work-experience.html">Work Experience</a> |
-        <a href="projects.html">Projects</a> |
-        <a href="contact.html">Contact</a>
-        <a href="assignments.html">Assignments</a>
+        <a href="Projects.html">Projects</a>
     </nav>
     <main>
         <h1>About Me</h1>
