--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <a href="index.html">About Me</a> |
-        <a href="Projects.html">Projects</a>
+        <a href="projects.html">Projects</a>
     </nav>
     <main>
         <h1>About Me</h1>
