--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
     <!-- Navigation Bar -->
     <nav>
         <a href="index.html">About Me</a> |
-        <a href="Projects.html">Projects</a>
+        <a href="projects.html">Projects</a>
     </nav>
 
     <!-- Main Content Area -->
