--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
         This project demonstrates how large language models like GPT-2 generate text one token at a time. 
         I explored how the model calculates the probability distribution for the next token based on the input 
         sequence, then selected the most likely token to extend the text step-by-step. The project also showcases 
-        the difference between manual generation and the built-in `generate()` method provided by HuggingFace's 
+        the difference between manual generation and the built-in generate() method provided by HuggingFace's 
         Transformers library.
     </p>
     <p>
