--- a/projects.html
+++ b/projects.html
@@ -37,33 +37,25 @@
     </p>
         </section>
 
-        <section></section>
-            <h2>Project 1: Data Collection and Analysis</h2>
-            <p>
-                The project focussed on achieveing the following goals:
-                1. Practice collecting, interacting, and visualizing data.
-                2. Practice making a hypothesis based on training data and then evaluating it on test data.
-            </p>
-            <p>
-                <a href="https://github.com/Swatkats13/jains-assignment-1.git">Github Link</a>
-            </p>
-        </section>
+        <section>
+    <h2>Project 1: Classification of Handwritten Digits using MLP</h2>
+    <p>
+        In this project, I trained a <strong>Multi-Layer Perceptron (MLP)</strong> to classify handwritten digits from the 
+        <a href="https://en.wikipedia.org/wiki/MNIST_database" target="_blank">MNIST dataset</a>. 
+        The MNIST dataset consists of 28×28 grayscale images of digits from 0 to 9, and the goal was to correctly classify each image into one of 10 digit classes.
+        Using the <code>MLPClassifier</code> from <code>scikit-learn</code>, I built and trained a simple neural network with one hidden layer. 
+        The model was evaluated on a separate test set and achieved high classification accuracy. The project also includes visualization of predictions, comparing true vs. predicted labels, with color-coded highlights to spot misclassified examples—an important step for model debugging.
 
-        <section></section>
-            <h2>Project 2: KMeans Clustering Visualization Webpage</h2>
-            <p>
-                In this project, an interactive web application that demonstrates the KMeans clustering algorithm 
-                using various initialization methods was created. The goal was to explore the impact of different initialization 
-                strategies for the KMeans Algorithm on the clustering outcome.
-            </p>
-            <p>
-                <a href="https://github.com/Swatkats13/jains-assignment-2.git">Github Link</a>
-            </p>
-            <video width="640" height="360" controls>
-                <source src="videos/KmeansVid.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-        </section>
+    </p>
+    <p>
+        Key concepts include: Loading and preprocessing the MNIST dataset using <code>fetch_openml</code>, Training a neural network using <code>MLPClassifier</code>,
+            Evaluating classification performance on train and test sets, Visualizing correct and incorrect predictions
+    </p>
+    <p>
+        <a href="https://github.com/Swatkats13/Projects/blob/main/MLP%20Classification/MLP_Classification_of_Handwritten_Digits.ipynb">GitHub Link</a>
+    </p>
+</section>
+
 
         <section></section>
             <h2>Project 3: Singular Value Decomposition(SVD) Implementation</h2>
