--- a/projects.html
+++ b/projects.html
@@ -56,6 +56,37 @@
     </p>
 </section>
 
+<section>
+    <h2>Project 2: Hands-On Introduction to Neural Networks with PyTorch and HuggingFace</h2>
+    <p>
+        In this project, I built a solid foundation in neural networks by working hands-on with two widely used deep learning libraries: 
+        <strong>PyTorch</strong> and <strong>HuggingFace Transformers</strong>. The goal was to develop a deep understanding of how to 
+        construct, train, and apply neural networks using both low-level building blocks and high-level pre-trained models. The project consists of two main parts:
+    <ul>
+        <li>
+            <strong>PyTorch Fundamentals:</strong> I created tensors, constructed a custom Multi-Layer Perceptron (MLP) using <code>torch.nn</code>, 
+            defined a loss function and optimizer, and implemented a training loop from scratch. These steps demonstrated the full workflow 
+            of training a neural network.
+        </li>
+        <li>
+            <strong>HuggingFace Transformers:</strong> I used a pre-trained sentiment analysis model 
+            (<code>distilbert-base-uncased-finetuned-sst-2-english</code>) to classify movie reviews. I also loaded and evaluated real-world 
+            text data using the HuggingFace <code>datasets</code> library.
+        </li>
+    </ul>
+    </p>
+    <p>
+        Key concepts covered: Creating and manipulating tensors on CPU/GPU with PyTorch, Building a feedforward neural network (MLP) using PyTorch modules,
+            Training a model using forward pass, loss computation, backpropagation, and optimization,
+            Using HuggingFace Transformers for zero-shot sentiment classification,
+            Loading and iterating over the IMDb dataset using the HuggingFace datasets API,
+    </p>
+    <p>
+        <a href="https://github.com/Swatkats13/Projects/blob/main/Pytorch%20and%20Hugging%20Face%20Exploration/cleaned_notebook.ipynb">GitHub Link</a>
+    </p>
+</section>
+
+
 
         <section></section>
             <h2>Project 3: Singular Value Decomposition(SVD) Implementation</h2>
