--- a/projects.html
+++ b/projects.html
@@ -79,7 +79,7 @@
         Key concepts covered: Creating and manipulating tensors on CPU/GPU with PyTorch, Building a feedforward neural network (MLP) using PyTorch modules,
             Training a model using forward pass, loss computation, backpropagation, and optimization,
             Using HuggingFace Transformers for zero-shot sentiment classification,
-            Loading and iterating over the IMDb dataset using the HuggingFace datasets API,
+            Loading and iterating over the IMDb dataset using the HuggingFace datasets API
     </p>
     <p>
         <a href="https://github.com/Swatkats13/Projects/blob/main/Pytorch%20and%20Hugging%20Face%20Exploration/cleaned_notebook.ipynb">GitHub Link</a>
