--- a/projects.html
+++ b/projects.html
@@ -225,27 +225,32 @@
     </video>
 
 
+<section>
+  <h2>Project 8: Vector Search from Scratch using NumPy</h2>
+  <p>
+    In this project, I implemented a basic <strong>vector search engine from scratch using only NumPy</strong>. The goal was to demystify how popular vector databases like FAISS or Pinecone work internally by building core functionality such as distance calculations and K-Nearest Neighbors (KNN) retrieval without using any external ML libraries.
+    This project highlights the importance of <strong>vector similarity</strong> in machine learning and information retrieval. I implemented and compared both <strong>Euclidean distance</strong> and <strong>Cosine distance</strong>, and explored how <em>normalization of vectors</em> can affect distance calculations and the ranking of nearest neighbors.
+    This hands-on implementation helps understand when to use each distance metric, and how raw vs normalized embeddings affect similarity comparisons—an essential concept in vector-based search and NLP systems.
+
+  </p>
+  
+
+  <p>
+    Key steps included:
+      Implementing Euclidean and Cosine distance functions manually,
+      Building a configurable K-Nearest Neighbors function with choice of distance metric,
+      Testing all components with known inputs to ensure correctness,
+      Analyzing how normalization affects nearest neighbor rankings,
+      Visualizing and printing the query vector and its nearest neighbors
+    
+  </p>
+
+
+  <p>
+    <a href="https://github.com/Swatkats13/Projects/blob/main/Basic%20Vector%20Search/Basic_Vector_Search.ipynb">GitHub Link</a>
+  </p>
 </section>
 
-
-<h2>Project 8: Logistic Regression </h2>
-<p>
-    In this project, I explored the effect of shifting clusters in a dataset 
-    on the parameters of a logistic regression model.
-
-<p>
-
-
-    <a href="https://github.com/Swatkats13/jains-assignment-8.git">Github Link</a>
-</p>
-
-
-<video width="640" height="360" controls>
-    <source src="videos/LogReg.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-</video>
-
-</section>
 
 <h2>Project 9: Neural Networks </h2>
 <p>
